Removing deprecated code
Mostly farm lodging and renamed theme related.